--- a/popup.html
+++ b/popup.html
@@ -1,20 +1,53 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8"/>
-	<title>popup</title>
+<html><head>
+	<meta charset="utf-8">
+	<title>Generator</title>
 </head>
-<body style="width:600px;min-height:200px;background-color: cornflowerblue;color: azure;">
-	<h1>PBWM Selenium Page Object Generator</h1>
-	<div style="margin: 10px;">
-		<button id="btCode">Generated Code</button>
-		<button id="btReminder">Display/Hide Reminder</button>
-	</div>
-	<textarea id="taCode" style="width: 90%;height:400px;background-color: whitesmoke;"></textarea>
 
+<body style="width:800px;min-height:400px;font-size: 10;font-weight: 100;">
 
+	<article data-theme="dark" style="margin: 0;padding: 20px;">
+		<h5 align="center" style="margin-bottom: 10px;">PBWM Selenium Page Object Generator</h5>
+		<div style="
+    padding-bottom: 10px;
+">
+			<a href="#" id="btCode" role="button" class="outline">Generated Code</a>
+			<a href="#" id="btReminder" role="button" class="outline">Display/Hide Reminder</a>
+		
+		</div>
+
+		<textarea id="taCode" cols="20" rows="10">@findBy(input = "prodType")
+private Webelement prodType; //Product Type
+
+@findBy(input = "prodType")
+private Webelement prodType; //Product Type
+
+@findBy(input = "prodType")
+private Webelement prodType; //Product Type
+
+@findBy(input = "prodType")
+private Webelement prodType; //Product Type
+
+@findBy(input = "prodType")
+private Webelement prodType; //Product Type
+
+@findBy(input = "prodType")
+private Webelement prodType; //Product Type
+
+@findBy(input = "prodType")
+private Webelement prodType; //Product Type
+
+@findBy(input = "prodType")
+private Webelement prodType; //Product Type
+	
+		</textarea>
+
+	</article>
+
+	<link rel="stylesheet" href="css/pico.min.css">
 	<script type="text/javascript" src="js/jquery-1.8.3.js"></script>
 	<script type="text/javascript" src="js/popup.js"></script>
 
-</body>
-</html>
+
+
+</body></html>
