--- a/popup.html
+++ b/popup.html
@@ -4,42 +4,18 @@
 	<title>Generator</title>
 </head>
 
-<body style="width:800px;min-height:400px;font-size: 10;font-weight: 100;">
+<body style="width:800px;min-height:400px;">
 
 	<article data-theme="dark" style="margin: 0;padding: 20px;">
 		<h5 align="center" style="margin-bottom: 10px;">PBWM Selenium Page Object Generator</h5>
-		<div style="
-    padding-bottom: 10px;
-">
+		<div style="padding-bottom: 10px;">
 			<a href="#" id="btCode" role="button" class="outline">Generated Code</a>
 			<a href="#" id="btReminder" role="button" class="outline">Display/Hide Reminder</a>
 		
 		</div>
 
-		<textarea id="taCode" cols="20" rows="10">@findBy(input = "prodType")
-private Webelement prodType; //Product Type
-
-@findBy(input = "prodType")
-private Webelement prodType; //Product Type
-
-@findBy(input = "prodType")
-private Webelement prodType; //Product Type
-
-@findBy(input = "prodType")
-private Webelement prodType; //Product Type
-
-@findBy(input = "prodType")
-private Webelement prodType; //Product Type
-
-@findBy(input = "prodType")
-private Webelement prodType; //Product Type
-
-@findBy(input = "prodType")
-private Webelement prodType; //Product Type
-
-@findBy(input = "prodType")
-private Webelement prodType; //Product Type
-	
+		<textarea id="taCode" cols="20" rows="15">
+			
 		</textarea>
 
 	</article>
