修改了一些默认样式，没有那么大了

--- a/popup.html
+++ b/popup.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html><head>
+<html>
+
+<head>
 	<meta charset="utf-8">
-	<title>Generator</title>
+	<title>Selenium Page Object Generator</title>
 </head>
 
-<body style="width:800px;min-height:400px;">
+<body style="width:500px;height:500px;" data-theme="dark">
 
-	<article data-theme="dark" style="margin: 0;padding: 20px;">
-		<h5 align="center" style="margin-bottom: 10px;">PBWM Selenium Page Object Generator</h5>
-		<div style="padding-bottom: 10px;">
+	<article style="margin: 0;">
+		<header id='theme' align="center">PBWM Selenium Page Object Generator</header>
+		<div style="padding-bottom: 5px;">
 			<a href="#" id="btCode" role="button" class="outline">Generated Code</a>
 			<a href="#" id="btReminder" role="button" class="outline">Display/Hide Reminder</a>
-		
 		</div>
 
-		<textarea id="taCode" cols="20" rows="15">
-			
+		<textarea id="taCode" cols="20" rows="22" style="resize: none;">
+
 		</textarea>
 
 	</article>
@@ -26,4 +27,6 @@
 
 
 
-</body></html>
+</body>
+
+</html>
