改了一下按钮文字

--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
 	<article style="margin: 0;">
 		<header id='theme' align="center">PBWM Selenium Page Object Generator</header>
 		<div style="padding-bottom: 5px;">
-			<a href="#" id="btCode" role="button" class="outline">Generated Code</a>
+			<a href="#" id="btCode" role="button" class="outline">Generate Code</a>
 			<a href="#" id="btReminder" role="button" class="outline">Display/Hide Reminder</a>
 		</div>
 
