添加保存默认主题功能

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
 	<title>Selenium Page Object Generator</title>
 </head>
 
-<body style="width:500px;height:500px;" data-theme="dark">
+<body style="width:500px;height:500px;">
 
 	<article style="margin: 0;">
 		<header id='theme' align="center">PBWM Selenium Page Object Generator</header>
@@ -24,8 +24,6 @@
 	<link rel="stylesheet" href="css/pico.min.css">
 	<script type="text/javascript" src="js/jquery-1.8.3.js"></script>
 	<script type="text/javascript" src="js/popup.js"></script>
-
-
 
 </body>
 
