user jquery 3.6 and redesign the layout

--- a/popup.html
+++ b/popup.html
@@ -4,27 +4,27 @@
 <head>
 	<meta charset="utf-8">
 	<title>Selenium Page Object Generator</title>
+	<link rel="stylesheet" href="css/pico.css">
+	<link rel="stylesheet" href="css/custom.css">
+
 </head>
 
-<body style="width:500px;height:500px;">
-
+<body style="width:max-content;">
 	<article style="margin: 0;">
 		<header id='theme' align="center">PBWM Selenium Page Object Generator</header>
-		<div style="padding-bottom: 5px;">
-			<a href="#" id="btCode" role="button" class="outline">Generate Code</a>
-			<a href="#" id="btReminder" role="button" class="outline">Display/Hide Reminder</a>
+		<div style="padding-bottom: 1rem;">
+			<a href="#" id="btCode" role="button" class="outline">Show Title</a>
+			<------>
+			<a href="#" id="btReminder" role="button" class="outline">Show URL</a>
 		</div>
 
-		<textarea id="taCode" cols="20" rows="22" style="resize: none;">
+		<textarea id="taCode" cols="20" rows="15" style="resize: none;"></textarea>
 
-		</textarea>
-
-	</article>
-
-	<link rel="stylesheet" href="css/pico.min.css">
-	<script type="text/javascript" src="js/jquery-1.8.3.js"></script>
-	<script type="text/javascript" src="js/popup.js"></script>
-
+		<script type="text/javascript" src="js/jquery.js"></script>
+		<script type="text/javascript" src="js/popup.js"></script>
 </body>
+
+<script>
+</script>
 
 </html>
